name:                scanner-json
version:             0.1
synopsis:            Fast JSON parser
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Yuras Shumovich
maintainer:          shumovichy@gmail.com
-- copyright:           
category:            JSON
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Scanner.JSON
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base <5
                     , bytestring
                     , text
                     , vector
                     , unordered-containers
                     , scientific
                     , aeson ==0.11.*
                     , scanner
  ghc-options:         -O2
  hs-source-dirs:      lib
  default-language:    Haskell2010

test-suite spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      spec
  main-is:             spec.hs
  build-depends:       base
                     , vector
                     , aeson
                     , scanner
                     , hspec
                     , scanner-json
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  build-depends:       base
                     , bytestring
                     , attoparsec
                     , aeson
                     , criterion
                     , scanner
                     , scanner-json
  default-language:    Haskell2010

executable validate-json
  hs-source-dirs:      validate
  main-is:             validate.hs
  build-depends:       base
                     , bytestring
                     , attoparsec
                     , aeson
                     , criterion
                     , scanner
                     , scanner-json
  default-language:    Haskell2010
